<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Deferred SMS</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Deferred SMS</string>
    <string name="rec_phone">Enter the phone number of recipient</string>
    <string name="message">Message</string>
    <string name="send">Send SMS</string>
    <string name="set_time">Set Send Time</string>
    <string name="alarmPrompt">Alarm Not Set</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>

</resources>